Bug 478352 - Status bar has "white box" UI artifact
Summary: Status bar has "white box" UI artifact
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.24.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-10 15:32 UTC by IFriendly
Modified: 2024-03-02 17:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.0
Sentry Crash Report:


Attachments
Screenshot for 2 states (kmail mail checking and kmail idle) (8.33 KB, image/png)
2023-12-10 15:32 UTC, IFriendly
Details

Note You need to log in before you can comment on or make changes to this bug.
Description IFriendly 2023-12-10 15:32:33 UTC
Created attachment 164073 [details]
Screenshot for 2 states (kmail mail checking and kmail idle)

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Check that window schema is Oxygen/Plastic
2. Open kmail2
3. Check that artifact in status bar is present  (see screenshot attachment)

OBSERVED RESULT


EXPECTED RESULT
Clear status bar without "white box"

SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11
Kernel Version: 6.2.0-37-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2023-12-11 07:29:35 UTC
Ok I can confirm it.
I will fix it soon.
Regards
Comment 2 Laurent Montel 2023-12-11 07:46:10 UTC
Git commit ebe664976fafb11c49a735260970a80b74a8a3f3 by Laurent Montel.
Committed on 11/12/2023 at 08:46.
Pushed by mlaurent into branch 'master'.

Fix bug 478352:  Status bar has "white box" UI artifact
FIXED-IN: 6.0.0

M  +1    -1    messageviewer/src/dkim-verify/dkimwidgetinfo.cpp

https://invent.kde.org/pim/messagelib/-/commit/ebe664976fafb11c49a735260970a80b74a8a3f3
Comment 3 IFriendly 2023-12-13 21:00:59 UTC
Thank you
I'll check it in new version.
I'll return with feedback later
Comment 4 IFriendly 2024-03-02 17:33:17 UTC
Bug fixed in 6.0. Can confirm.
Thank you