Fix bug 478352:  Status bar has "white box" UI artifact

BUG: 478352
FIXED-IN: 6.0.0